feat(config): 添加对 time.Duration 类型的支持，更新相关配置文件

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,6 +5,7 @@ apis:
     url: "https://api.example.com/user"
     headers:
       Authorization: "Bearer token"
+    duration: 120s
 
 server:
   host: 12345
